# pledgertools

./: .gitignore  pyproject.toml
pledgertools/: main.py  parser.py  pledger.py
scripts/: comma_check.py  csv_processor.py
test/: test_parser.py
